# stata-gtools-wintel

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
patches/: fixes_c_wintel.patch  gtools_h_wintel.patch  quicksortMultiLevel_c_wintel.patch  quicksort_c_wintel.patch
test/: bench.csv  bench.do  bench.py
